# Falcor

./: .gitignore  Falcor.sln  README.md  bistro3k_config.py  bistro4k_config.py  bistro_config.py  dependencies.xml  emerald_config.py  hairball_config.py  noelle_config.py  poisson_disc_samples.py  ray_line_occupation.py  record_sponza.py  simple_ray_line.py  startup.py  zero_day_config.py
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/AccumulatePass/: AccumulatePass.vcxproj
Source/RenderPasses/Antialiasing/: Antialiasing.vcxproj
Source/RenderPasses/BSDFViewer/: BSDFViewer.vcxproj
Source/RenderPasses/BillboardRayTracer/: BillboardRayTracer.cpp  BillboardRayTracer.h  BillboardRayTracer.rt.slang  BillboardRayTracer.vcxproj  BillboardRayTracer.vcxproj.filters  Helper.slang  RayDifferentials.slang  Shadow.slang
Source/RenderPasses/BlitPass/: BlitPass.cpp  BlitPass.vcxproj
Source/RenderPasses/CSM/: CSM.vcxproj
Source/RenderPasses/CameraPath/: CameraPath.cpp  CameraPath.h
Source/RenderPasses/ConstantColor/: ConstantColor.cpp  ConstantColor.h  ConstantColor.vcxproj  ConstantColor.vcxproj.filters
Source/RenderPasses/ConvertFormat/: ConvertFormat.cpp  ConvertFormat.h  ConvertFormat.vcxproj  ConvertFormat.vcxproj.filters  convert.slang
Source/RenderPasses/CrossBilateralBlur/: Blur.ps.hlsl  Blur.ps.slang  CrossBilateralBlur.cpp  CrossBilateralBlur.h  CrossBilateralBlur.vcxproj  CrossBilateralBlur.vcxproj.filters
Source/RenderPasses/DLSSPass/: DLSSPass.cpp  DLSSPass.h  DLSSPass.vcxproj
Source/RenderPasses/DebugPasses/: DebugPasses.vcxproj
(+755 files in other folders)
