add_subdirectory(AccumulatePass)
add_subdirectory(BlitPass)
add_subdirectory(BSDFViewer)
add_subdirectory(CameraPath)
add_subdirectory(DebugPasses)
add_subdirectory(DLSSPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(ErrorOverlay)
add_subdirectory(FLIPPass)
add_subdirectory(GBuffer)
add_subdirectory(ImageLoader)
add_subdirectory(LightTrace)
add_subdirectory(MinimalPathTracer)
add_subdirectory(MinimalPathTracerShadowMap)
add_subdirectory(ModulateIllumination)
add_subdirectory(NRDPass)
add_subdirectory(OptixDenoiser)
add_subdirectory(PathBenchmark)
add_subdirectory(PathTracer)
add_subdirectory(PathTracerShadowMap)
add_subdirectory(PerlinNoise)
add_subdirectory(PhotonMapper)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RayTracedSoftShadows)
add_subdirectory(RenderPassTemplate)
add_subdirectory(ReSTIR_FG)
add_subdirectory(ReSTIR_GI)
add_subdirectory(ReSTIR_GI_Shadow)
add_subdirectory(RTAO)
add_subdirectory(RTXDIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(ShadowPass)
add_subdirectory(SimplePostFX)
add_subdirectory(SVGFPass)
add_subdirectory(TAA)
add_subdirectory(TestPasses)
add_subdirectory(TestPathSM)
add_subdirectory(TestShadowMap)
add_subdirectory(ToneMapper)
add_subdirectory(TransparencyLinkedList)
add_subdirectory(TransparencyPathTracer)
add_subdirectory(Utils)
add_subdirectory(VideoRecorder)
add_subdirectory(WhittedRayTracer)
